--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Yamblz</string>
     <string name="content">Hello</string>
+    <string name="stub">
+        Lorem ipsum dolor sit amet, pro autem persius ut, dicant mucius ut vel.
+        Mei duis temporibus cotidieque no. Ex ius minim delenit accusata, alienum cotidieque id nam,
+        eos ocurreret consectetuer reprehendunt et. No fastidii quaerendum nec. An eripuit temporibus pri,
+        diceret habemus ei vis. Ut vel nibh erant, putent nonumes eam in. Vel id postea labores meliore,
+        mel choro appareat intellegat no. Sea ei eripuit comprehensam. Duo dicam diceret lucilius ei,
+        eu sonet essent mel. Ut quodsi oblique constituam sed, ne quis scribentur pro, viris accumsan reformidans te nec.
+        Est platonem interesset ea, eruditi dissentias nec ex, ei duis principes pri.
+        Ei usu nemore eripuit liberavisse. Vis ut alia placerat apeirian, at illud docendi commune has.
+        Quodsi tamquam dissentias in vel, pro suas eius ei, quo in quando fierent pertinax.
+        Legimus perfecto pro et, eam nostro detracto corrumpit ne.
+    </string>
 </resources>
