--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Yamblz</string>
+    <string name="app_name">Touch events HW</string>
     <string name="content">Hello</string>
 </resources>
