--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
-    <string name="app_name">Yamblz</string>
+    <string name="app_name">Touch events</string>
     <string name="content">Hello</string>
+    <string name="email_author">Anny Johnes</string>
+    <string name="email_theme">Plans for your visit</string>
+    <string name="email_time">2 hours</string>
+    <string name="email_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel enim tincidunt, finibus lacus volutpat, aliquet quam. Donec sit amet magna a ante pellentesque laoreet id efficitur nisi. Nunc a dolor efficitur, pellentesque eros sed, semper metus. Vestibulum quam nunc, pretium id risus venenatis, convallis ornare diam. Etiam egestas sodales placerat. Nam cursus magna at sem auctor, nec convallis neque porta. Suspendisse id dolor blandit nisi venenatis mattis. Ut tincidunt, nulla non vulputate ultrices, orci sapien vestibulum urna, id dapibus tellus dui at dui. Donec in ornare ante. Cras tincidunt dui lacus, a vulputate metus finibus sed. Suspendisse et massa mi. Aliquam ultricies dapibus sapien, eget luctus odio sodales non. Donec sem augue, consequat at dapibus vitae, maximus eu felis. In tincidunt, metus a imperdiet sollicitudin, elit ante sagittis sapien, non volutpat neque arcu nec dolor.</string>
+    <string name="move_to_inbox">Move to inbox</string>
+    <string name="check">Check</string>
+    <string name="remove">Remove</string>
+    <string name="author_photo">Photo</string>
+    <string name="big_remove_icon">Big remove icon</string>
 </resources>
