add animated background icons  works, but code need some refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="remove">Remove</string>
     <string name="author_photo">Photo</string>
     <string name="big_remove_icon">Big remove icon</string>
+    <string name="big_inbox_icon">Big inbox icon</string>
 </resources>
