add swipe to delete view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,39 @@
 <resources>
     <string name="app_name">Yamblz</string>
-    <string name="content">Hello</string>
+    <string name="content">
+- Я так больше не могу, - сказала Принцесса, - Я увольняюсь.\n
+- А в чем дело-то?\n
+Принцесса угрюмо посмотрела на Ахиллеса:\n
+- Тебя когда-нибудь Рыцарь спасал от Дракона?\n
+- Не доводилось.\n
+- А наоборот?\n
+- Эээ…нет.\n
+- А Дракона от тебя хоть раз в жизни спасали?!\n
+Ахиллес почесал в затылке.\n
+- Я, конечно, бываю не подарок, - доверительно сказал он. - Но не настолько.\n
+- А ведь я еще про наши свадьбы молчу.\n
+- Спасибо.\n
+Черепаха понимающе покачала головой:\n
+- Хочешь переехать в другой миф?\n
+- Да!\n
+- В какой?\n
+- В серьезный и романтичный, - сказала Принцесса, - И чтобы никаких свадеб!\n
+- А что ты умеешь?\n
+- Ну, я могла бы преподавать комбинаторику.\n
+- Романтично?\n
+- М-да, - сказала Принцесса, - Действительно.\n
+- Что-нибудь еще?\n
+Принцесса вздохнула:\n
+- Ну а чему могут научить Рыцарь и Дракон?\n
+\n
+***\n
+- Думаешь, справится? – спросил Ахиллес.\n
+- Она-то? – переспросила Черепаха, - Да она просто коммандос.\n
+- Концовка слишком горячая.\n
+- Ничего, Дракон ее хорошо подготовил.\n
+- А свадеб точно не будет?\n
+- Нет, - сказала Черепаха, - Но все, кто любит ее, пойдут за ней.\n
+http://vetertann.livejournal.com/281262.html</string>
+
+
 </resources>
